--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html lang="en">
 
 <head>
+
+    <!-- meta start -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- style css link start -->
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/main2.css">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- style css link end -->
+
+    <!-- swiper start link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <title>Document</title>
+    <!-- swiper end link -->
+
+    <!-- title -->
+    <title>fevlake</title>
+
+    <!-- font start -->
     <style>
         @font-face {
             font-family: 'PP Object Sans';
@@ -25,9 +37,13 @@
             src: url(./fonts/otf/PPObjectSans-Medium.otf);
         }
     </style>
+    <!-- font end -->
+
 </head>
 
 <body>
+
+    <!-- header start -->
     <header class="header">
         <div class="header-container">
             <div class="header-top">
@@ -41,9 +57,11 @@
                             <img src="./img/header/exit-img.svg" alt="" class="exit-img">
                         </button>
                         <ul class="hamburger-list">
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» Проекты и кейсы</a></li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» Услуги</a></li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» Стать клиентом</a></li>
+                            <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Проекты и
+                                        кейсы</span></a></li>
+                            <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Услуги</span></a></li>
+                            <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Стать
+                                        клиентом</span></a></li>
                         </ul>
                         <a href="tel:+7 (495) 123 45 67" class="hamburger-bar-phone">+7 (495) 123 45 67</a>
                     </div>
@@ -74,7 +92,10 @@
             </div>
         </div>
     </header>
+    <!-- header end -->
 
+
+    <!-- platform start -->
     <section class="platform">
         <div class="platform_container">
             <p class="platormTopText">
@@ -133,7 +154,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="platformBottomContent">
-                                <h2 class="platformBottomTitle">Yandex.Cloud</h2>
+                                <h2 class="platformBottomTitle">Yandex.<span>Cloud</span></h2>
                                 <p class="platformBottomText">
                                     Одни из первых стали ключевыми партнерами Yandex.Cloud и помогаем бизнесу быстро и
                                     безопасно перевести и поддерживать инфраструктуру в облаке
@@ -181,7 +202,9 @@
             </div>
         </div>
     </section>
+    <!-- platform end -->
 
+    <!-- portfolio start -->
     <section class="portfolio">
         <div class="portfolio-container">
             <h1 class="portfolio-title">Портфолио</h1>
@@ -212,7 +235,9 @@
             </ul>
         </div>
     </section>
+    <!-- portfolio end -->
 
+    <!-- yandex start -->
     <section class="yandex">
         <div class="yandex-container">
             <h1 class="yandex-title">Yandex.Cloud & <span class="yandex-title-span"> Fevlake</span></h1>
@@ -278,7 +303,9 @@
             </div>
         </div>
     </section>
+    <!-- yandex end -->
 
+    <!-- komanda start -->
     <section class="komanda">
         <img src="./img/komanda/komanda-bg.svg" alt="" class="komanda-img1">
         <img src="./img/komanda/komanda-bg2.svg" alt="" class="komanda-img2">
@@ -481,7 +508,9 @@
             </div>
         </div>
     </section>
+    <!-- komanda end -->
 
+    <!-- data start -->
     <section hidden class="data">
         <div class="data-container ">
             <p class="data-text">В <span class="data-text-variable">Fevlake</span> мы проектируем и обслуживаем
@@ -568,7 +597,9 @@
             </div>
         </div>
     </section>
+    <!-- data end -->
 
+    <!-- rebrain start -->
     <section class="rebrain">
         <div class="rebrain-container">
             <div class="rebrain-box">
@@ -604,7 +635,9 @@
             </div>
         </div>
     </section>
+    <!-- rebrain end -->
 
+    <!-- events start -->
     <section class="events">
         <div class="eventsConatiner">
             <h2 class="eventsTitle">События Fevlake</h2>
@@ -664,7 +697,9 @@
             <button class="eventSwiperBtn eventSwiperBtnRight swiper-button-next2"></button>
         </div>
     </section>
+    <!-- events end -->
 
+    <!-- blog start -->
     <section class="blog">
         <div class="blogContainer">
             <div class="blogArrow">
@@ -713,7 +748,9 @@
             </div>
         </div>
     </section>
+    <!-- blog end -->
 
+    <!-- footer start -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-row">
@@ -721,10 +758,10 @@
                     <li class="footer-item">
                         <h3 class="footer-link-title">Социальные сети</h3>
                     </li>
-                    <li class="footer-item"><a href="#" class="footer-link">Telegram</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">VK</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">Habr</a></li>
-                    <li class="footer-item"><a href="#" class="footer-link">YouTube</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">Telegram</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">VK</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">Habr</a></li>
+                    <li class="footer-item"><a href="#" target="_blank" class="footer-link">YouTube</a></li>
                 </ul>
                 <ul class="footer-list-2">
                     <li class="footer-item">
@@ -777,9 +814,13 @@
 
         </div>
     </footer>
+    <!-- footer end -->
 
+    <!-- swiper start -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- swiper end -->
 
+    <!-- script start -->
     <script>
         var swiper = new Swiper(".mySwiper", {
             slidesPerView: 1,
@@ -824,6 +865,7 @@
             },
         });
     </script>
+    <!-- script end -->
 
 
     <script src="./js/app.js"></script>
