--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             font-family: 'pp-500';
             src: url(./fonts/otf/PPObjectSans-Medium.otf);
         }
+
+        button {
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -35,25 +39,30 @@
                 <nav class="navbar">
                     <button class="header-hmgr"><img src="./img/header/hamburger.svg" alt=""></button>
                     <div class="hamburger-bar">
-                        <a href="" class="hamburger-logo"><img src="./img/header/header-logo.svg" alt=""
-                                class="hamburger-logo-img"></a>
-                        <button class="exit-btn">
-                            <img src="./img/header/exit-img.svg" alt="" class="exit-img">
-                        </button>
+                        <div class="hamburger_top">
+                            <a href="" class="hamburger-logo"><img src="./img/header/header-logo.svg" alt=""
+                                    class="hamburger-logo-img"></a>
+
+                            <button class="exit-btn">
+                                <img src="./img/header/exit-img.svg" alt="" class="exit-img">
+                            </button>
+                        </div>
                         <ul class="hamburger-list">
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» Проекты и кейсы</a></li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» Услуги</a></li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» Стать клиентом</a></li>
+                            <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» Проекты и кейсы</a>
+                            </li>
+                            <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» Услуги</a></li>
+                            <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» Стать клиентом</a>
+                            </li>
                         </ul>
                         <a href="tel:+7 (495) 123 45 67" class="hamburger-bar-phone">+7 (495) 123 45 67</a>
                     </div>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="" class="nav-link">» Проекты и кейсы</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">» Услуги</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">» Стать клиентом</a></li>
+                        <li class="nav-item"><a href="#" class="hoverMain nav-link">» Проекты и кейсы</a></li>
+                        <li class="nav-item"><a href="#" class="hoverMain nav-link">» Услуги</a></li>
+                        <li class="nav-item"><a href="#" class="hoverMain nav-link">» Стать клиентом</a></li>
                     </ul>
                 </nav>
-                <a href="tel:+7 (495) 123 45 67" class="header-phone">+7 (495) 123 45 67</a>
+                <a href="tel:+7 (495) 123 45 67" class="hoverMain header-phone">+7 (495) 123 45 67</a>
             </div>
             <div class="header-bottom">
                 <h1 class="header-title1">Одно агентство <br>
@@ -264,16 +273,12 @@
             </div>
             <div class="yandex-cards">
                 <div class="yandex-card">
-                    <img src="./img/yandex/yandex-card-img1.svg" alt="" class="yandex-card-img">
                 </div>
                 <div class="yandex-card">
-                    <img src="./img/yandex/yandex-card-img1.svg" alt="" class="yandex-card-img">
+                    <p class="yandexCardText"> Практикум 10 000 ивентов на YouTube</p>
                 </div>
                 <div class="yandex-card">
-                    <img src="./img/yandex/yandex-card-img2.svg" alt="" class="yandex-card-img">
-                </div>
-                <div class="yandex-card">
-                    <img src="./img/yandex/yandex-card-img3.svg" alt="" class="yandex-card-img">
+                    <p class="yandexCardText"> Программа Kubernetes x Yandex.Cloud</p>
                 </div>
             </div>
         </div>
@@ -309,29 +314,7 @@
             </div>
             <div class="komanda-bottom">
                 <div class="komanda-proekt">
-                    <div class="komanda-profesi">
-                        <h5 class="komanda-profesi-title">Мы — профессионалы</h5>
-                        <div class="komanda-profesi-cards">
-                            <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
-                            </div>
-                            <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg5.svg" alt="" style="width: 56px;">
-                            </div>
-                            <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg2.svg" alt="" style="width: 63px;">
-                            </div>
-                            <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg1.svg" alt="" style="width: 60px;">
-                            </div>
-                            <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg4.svg" alt="" style="width: 56px;">
-                            </div>
-                            <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
-                            </div>
-                        </div>
-                    </div>
+
                     <h5 class="komanda-proekt-title">Пример команды <span class="komanda-proekt-span">для вашего
                             проекта</span></h5>
                     <div class="komanda-proekt-cards">
@@ -455,29 +438,6 @@
                     <p class="komanda-text"><span style="color: #D84F54;">*</span>Пример конкретной команды для проекта.
                         Cостав подбираем индивидуально</p>
                 </div>
-                <div class="komanda-profesi">
-                    <h5 class="komanda-profesi-title">Мы — профессионалы</h5>
-                    <div class="komanda-profesi-cards">
-                        <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
-                        </div>
-                        <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg5.svg" alt="" style="width: 56px;">
-                        </div>
-                        <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg2.svg" alt="" style="width: 63px;">
-                        </div>
-                        <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg1.svg" alt="" style="width: 60px;">
-                        </div>
-                        <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg4.svg" alt="" style="width: 56px;">
-                        </div>
-                        <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -572,29 +532,34 @@
     <section class="rebrain">
         <div class="rebrain-container">
             <div class="rebrain-box">
-                <div class="rebrain-row">
-                    <h1 class="rebrain-title">Rebrain</h1>
-                    <ul class="rebrain-list">
-                        <li class="rebrain-item"> <img class="rebrain-item-img" src="./img/rebrain/icon.svg" alt="">
-                            <p class="rebrain-item-text">Развиваем индустрию
-                                ИТ-инфраструктуры в России и за рубежом: проводим онлайн-практикумы и воркшопы для
-                                инженеров</p>
-                        </li>
-                        <li class="rebrain-item2"> <img class="rebrain-item-img-2" src="./img/rebrain/icon.svg" alt="">
-                            <p class="rebrain-item-text2"> С нами уже более <span class="rebrain-icon-span">40 000
-                                </span>инженеров, присоединяйтесь!</p>
-                        </li>
-                    </ul>
-                    <ul class="rebrain-list-2">
-                        <li class="rebrain-item"><a href="#" class="rebrain-link-1"><span class="rebrain-span">>></span>
-                                Telegram</a></li>
-                        <li class="rebrain-item"><a href="#" class="rebrain-link-2"><span class="rebrain-span">>></span>
-                                Сайт</a></li>
-                        <li class="rebrain-item"><a href="#" class="rebrain-link-3"><span class="rebrain-span">>></span>
-                                YouTube</a></li>
-                    </ul>
-
-                </div>
+                <!-- <div class="rebainBG"> -->
+                    <div class="rebrain-row">
+                        <h1 class="rebrain-title">Rebrain</h1>
+                        <ul class="rebrain-list">
+                            <li class="rebrain-item"> <img class="rebrain-item-img" src="./img/rebrain/icon.svg" alt="">
+                                <p class="rebrain-item-text">Развиваем индустрию
+                                    ИТ-инфраструктуры в России и за рубежом: проводим онлайн-практикумы и воркшопы для
+                                    инженеров</p>
+                            </li>
+                            <li class="rebrain-item2"> <img class="rebrain-item-img-2" src="./img/rebrain/icon.svg"
+                                    alt="">
+                                <p class="rebrain-item-text2"> С нами уже более <span class="rebrain-icon-span">40 000
+                                    </span>инженеров, присоединяйтесь!</p>
+                            </li>
+                        </ul>
+                        <ul class="rebrain-list-2">
+                            <li class="rebrain-item"><a href="#" class="rebrain-link-1"><span
+                                        class="rebrain-span">>></span>
+                                    Telegram</a></li>
+                            <li class="rebrain-item"><a href="#" class="rebrain-link-2"><span
+                                        class="rebrain-span">>></span>
+                                    Сайт</a></li>
+                            <li class="rebrain-item"><a href="#" class="rebrain-link-3"><span
+                                        class="rebrain-span">>></span>
+                                    YouTube</a></li>
+                        </ul>
+                    </div>
+                <!-- </div> -->
                 <div class="rebrain-col">
                     <div class="rebrain-col-img-link"><video class="rebrain-video" src="./video/XwCad_n5HLY.mp4"
                             controls></video></div>
@@ -772,9 +737,10 @@
                     </div>
                 </div>
                 <p class="years">2024</p>
-
             </div>
-
+        </div>
+        <div class="fevlakelogoFooter">
+            <img src="./img/footer/fevlake.svg" alt="logo">
         </div>
     </footer>
 
