--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
         button {
             cursor: pointer;
         }
+
+
+        .swiper-pagination-bullet {
+      width: 20px;
+      height: 20px;
+      text-align: center;
+      line-height: 20px;
+      font-size: 12px;
+      color: #000;
+      opacity: 1;
+      background: rgba(0, 0, 0, 0.2);
+    }
+
+    .swiper-pagination-bullet-active {
+      color: #fff;
+      background: #007aff;
+    }
     </style>
     <!-- font end -->
 
@@ -567,32 +584,28 @@
         <div class="rebrain-container">
             <div class="rebrain-box">
                 <!-- <div class="rebainBG"> -->
-                    <div class="rebrain-row">
-                        <h1 class="rebrain-title">Rebrain</h1>
-                        <ul class="rebrain-list">
-                            <li class="rebrain-item"> <img class="rebrain-item-img" src="./img/rebrain/icon.svg" alt="">
-                                <p class="rebrain-item-text">Развиваем индустрию
-                                    ИТ-инфраструктуры в России и за рубежом: проводим онлайн-практикумы и воркшопы для
-                                    инженеров</p>
-                            </li>
-                            <li class="rebrain-item2"> <img class="rebrain-item-img-2" src="./img/rebrain/icon.svg"
-                                    alt="">
-                                <p class="rebrain-item-text2"> С нами уже более <span class="rebrain-icon-span">40 000
-                                    </span>инженеров, присоединяйтесь!</p>
-                            </li>
-                        </ul>
-                        <ul class="rebrain-list-2">
-                            <li class="rebrain-item"><a href="#" class="rebrain-link-1"><span
-                                        class="rebrain-span">>></span>
-                                    Telegram</a></li>
-                            <li class="rebrain-item"><a href="#" class="rebrain-link-2"><span
-                                        class="rebrain-span">>></span>
-                                    Сайт</a></li>
-                            <li class="rebrain-item"><a href="#" class="rebrain-link-3"><span
-                                        class="rebrain-span">>></span>
-                                    YouTube</a></li>
-                        </ul>
-                    </div>
+                <div class="rebrain-row">
+                    <h1 class="rebrain-title">Rebrain</h1>
+                    <ul class="rebrain-list">
+                        <li class="rebrain-item"> <img class="rebrain-item-img" src="./img/rebrain/icon.svg" alt="">
+                            <p class="rebrain-item-text">Развиваем индустрию
+                                ИТ-инфраструктуры в России и за рубежом: проводим онлайн-практикумы и воркшопы для
+                                инженеров</p>
+                        </li>
+                        <li class="rebrain-item2"> <img class="rebrain-item-img-2" src="./img/rebrain/icon.svg" alt="">
+                            <p class="rebrain-item-text2"> С нами уже более <span class="rebrain-icon-span">40 000
+                                </span>инженеров, присоединяйтесь!</p>
+                        </li>
+                    </ul>
+                    <ul class="rebrain-list-2">
+                        <li class="rebrain-item"><a href="#" class="rebrain-link-1"><span class="rebrain-span">>></span>
+                                Telegram</a></li>
+                        <li class="rebrain-item"><a href="#" class="rebrain-link-2"><span class="rebrain-span">>></span>
+                                Сайт</a></li>
+                        <li class="rebrain-item"><a href="#" class="rebrain-link-3"><span class="rebrain-span">>></span>
+                                YouTube</a></li>
+                    </ul>
+                </div>
                 <!-- </div> -->
                 <div class="rebrain-col">
                     <div class="rebrain-col-img-link"><video class="rebrain-video" src="./video/XwCad_n5HLY.mp4"
