--- a/service.html
+++ b/service.html
@@ -4,9 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styleService.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>Service</title>
+
+    <style>
+        .nav-item {
+            border: 1px solid #363636;
+            padding: 7.5px 30px;
+        }
+
+
+        .header {
+            padding-top: 7px;
+            padding-bottom: 7px;
+            background: #2B2B2B;
+        }
+
+
+        .header-hmgr {
+            display: none;
+            padding: 12px 10px;
+            border: 1px solid #363636;
+            background-color: transparent;
+        }
+
+
+        .nav-link::before {
+    content: ">>";
+    color: #F3585B;
+}
+
+.nav-link {
+    font-family: 'PP Object Sans';
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 20.8px;
+    text-align: left;
+    text-decoration: none;
+    color: #F8F7F7;
+}
+
+.hamburger-bar-phone {
+    font-family: 'pp-500', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20.8px;
+    text-align: right;
+    color: #2B2B2B;
+    text-decoration: none;
+    display: none;
+    max-width: 150px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.header-phone {
+    font-family: "fontNormal", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20.8px;
+    text-align: right;
+    color: #F8F7F7;
+    text-decoration: none;
+}
+    </style>
 </head>
 
 <body>
