--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#" class="hoverMain nav-link">» Проекты и кейсы</a></li>
-                        <li class="nav-item"><a href="./Service.html" class="hoverMain nav-link">» Услуги</a></li>
+                        <li class="nav-item"><a href="./service.html" class="hoverMain nav-link">» Услуги</a></li>
                         <li class="nav-item"><a href="#" class="hoverMain nav-link">» Стать клиентом</a></li>
                     </ul>
                 </nav>
