--- a/index.html
+++ b/index.html
@@ -69,29 +69,7 @@
                 <a href="" class="header-logo"><img src="./img/header/header-logo.svg" alt="" class="header-logo"></a>
                 <nav class="navbar">
                     <button class="header-hmgr"><img src="./img/header/hamburger.svg" alt=""></button>
-                    <div class="hamburger-bar">
-                        <div class="hamburger_top">
-                            <a href="" class="hamburger-logo"><img src="./img/header/header-logo.svg" alt=""
-                                    class="hamburger-logo-img"></a>
 
-                            <button class="exit-btn">
-                                <img src="./img/header/exit-img.svg" alt="" class="exit-img">
-                            </button>
-                        </div>
-                        <ul class="hamburger-list">
-                            <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» <span>Проекты и кейсы</span></a>
-                            </li>
-                            <li class="hamburger-item"><a href="./Service.html" class="hoverMain hamburger-link">» <span>Услуги</span></a></li>
-                            <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» <span>Стать клиентом</span></a>
-                            </li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Проекты и
-                                        кейсы</span></a></li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Услуги</span></a></li>
-                            <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Стать
-                                        клиентом</span></a></li>
-                        </ul>
-                        <a href="tel:+7 (495) 123 45 67" class="hamburger-bar-phone">+7 (495) 123 45 67</a>
-                    </div>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#" class="hoverMain nav-link">» Проекты и кейсы</a></li>
                         <li class="nav-item"><a href="./service.html" class="hoverMain nav-link">» Услуги</a></li>
@@ -119,6 +97,34 @@
             </div>
         </div>
     </header>
+
+    <div class="hamburger-bar">
+        <div class="hamburgerBarContainer">
+            <div class="hamburger_top">
+                <a href="" class="hamburger-logo"><img src="./img/header/header-logo.svg" alt=""
+                        class="hamburger-logo-img"></a>
+
+                <button class="exit-btn">
+                    <img src="./img/header/exit-img.svg" alt="" class="exit-img">
+                </button>
+            </div>
+            <ul class="hamburger-list">
+                <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» <span>Проекты и
+                            кейсы</span></a>
+                </li>
+                <li class="hamburger-item"><a href="./Service.html" class="hoverMain hamburger-link">»
+                        <span>Услуги</span></a></li>
+                <li class="hamburger-item"><a href="" class="hoverMain hamburger-link">» <span>Стать клиентом</span></a>
+                </li>
+                <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Проекты и
+                            кейсы</span></a></li>
+                <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Услуги</span></a></li>
+                <li class="hamburger-item"><a href="" class="hamburger-link">» <span>Стать
+                            клиентом</span></a></li>
+            </ul>
+            <a href="tel:+7 (495) 123 45 67" class="hamburger-bar-phone">+7 (495) 123 45 67</a>
+        </div>
+    </div>
     <!-- header end -->
 
 
@@ -230,7 +236,7 @@
             </div>
         </div>
 
-    
+
     </section>
     <!-- platform end -->
 
@@ -362,7 +368,29 @@
             </div>
             <div class="komanda-bottom">
                 <div class="komanda-proekt">
-
+                    <div class="komanda-profesi">
+                        <h5 class="komanda-profesi-title">Мы — профессионалы</h5>
+                        <div class="komanda-profesi-cards">
+                            <div class="komanda-profesi-card">
+                                <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                            </div>
+                            <div class="komanda-profesi-card">
+                                <img src="./img/komanda/card-mini-bg5.svg" alt="" style="width: 56px;">
+                            </div>
+                            <div class="komanda-profesi-card">
+                                <img src="./img/komanda/card-mini-bg2.svg" alt="" style="width: 63px;">
+                            </div>
+                            <div class="komanda-profesi-card">
+                                <img src="./img/komanda/card-mini-bg1.svg" alt="" style="width: 60px;">
+                            </div>
+                            <div class="komanda-profesi-card">
+                                <img src="./img/komanda/card-mini-bg4.svg" alt="" style="width: 56px;">
+                            </div>
+                            <div class="komanda-profesi-card">
+                                <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                            </div>
+                        </div>
+                    </div>
                     <h5 class="komanda-proekt-title">Пример команды <span class="komanda-proekt-span">для вашего
                             проекта</span></h5>
                     <div class="komanda-proekt-cards">
@@ -486,6 +514,29 @@
                     <p class="komanda-text"><span style="color: #D84F54;">*</span>Пример конкретной команды для проекта.
                         Cостав подбираем индивидуально</p>
                 </div>
+                <div class="komanda-profesi">
+                    <h5 class="komanda-profesi-title">Мы — профессионалы</h5>
+                    <div class="komanda-profesi-cards">
+                        <div class="komanda-profesi-card">
+                            <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                        </div>
+                        <div class="komanda-profesi-card">
+                            <img src="./img/komanda/card-mini-bg5.svg" alt="" style="width: 56px;">
+                        </div>
+                        <div class="komanda-profesi-card">
+                            <img src="./img/komanda/card-mini-bg2.svg" alt="" style="width: 63px;">
+                        </div>
+                        <div class="komanda-profesi-card">
+                            <img src="./img/komanda/card-mini-bg1.svg" alt="" style="width: 60px;">
+                        </div>
+                        <div class="komanda-profesi-card">
+                            <img src="./img/komanda/card-mini-bg4.svg" alt="" style="width: 56px;">
+                        </div>
+                        <div class="komanda-profesi-card">
+                            <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -599,15 +650,20 @@
                         </li>
                     </ul>
                     <ul class="rebrain-list-2">
-                        <li class="rebrain-item"><a href="#" target="_blank" class="rebrain-link-1"><span class="rebrain-span">>></span>Telegram</a></li>
-                        <li class="rebrain-item"><a href="#" target="_blank" class="rebrain-link-2"><span class="rebrain-span">>></span>Сайт</a></li>
-                        <li class="rebrain-item"><a href="#" target="_blank" class="rebrain-link-3"><span class="rebrain-span">>></span>YouTube</a></li>
+                        <li class="rebrain-item"><a href="#" target="_blank" class="rebrain-link-1"><span
+                                    class="rebrain-span">>></span>Telegram</a></li>
+                        <li class="rebrain-item"><a href="#" target="_blank" class="rebrain-link-2"><span
+                                    class="rebrain-span">>></span>Сайт</a></li>
+                        <li class="rebrain-item"><a href="#" target="_blank" class="rebrain-link-3"><span
+                                    class="rebrain-span">>></span>YouTube</a></li>
                     </ul>
                 </div>
                 <!-- </div> -->
                 <div class="rebrain-col">
-                    <div class="rebrain-col-img-link"><video class="rebrain-video" src="./video/XwCad_n5HLY.mp4"
-                            controls></video></div>
+                    <div class="rebrain-col-img-link">
+                        <video class="rebrain-video" src="./video/XwCad_n5HLY.mp4"
+                            controls></video>
+                        </div>
                     <p class=" rebrain-col-text">C <span class="rebrain-col-span">2018</span> года мы развиваем
                         сообщество инженеров по всему миру и помогаем всем желающим стать профессионалами</p>
                 </div>
@@ -790,7 +846,7 @@
                 <p class="years">2024</p>
             </div>
         </div>
-   
+
     </footer>
     <!-- footer end -->
 
